various cleanups recommended by findbugs